@@ -1,4 +1,6 @@
 Version 1.0.0 (not yet released):
+- Added -a, --all-accounts option to query all accounts in the configuration
+  file. Changed short option for --auth-only from -a to -A.
 - Fixed handling of weird UIDs:
   1. When checking for control characters, use c_iscntrl() instead of iscntrl(),
      to be independent of the user's locale.
